# embedded-services

./: Cargo.toml
debug-service/: Cargo.toml
debug-service/.cargo/: config.toml
debug-service/src/: lib.rs
debug-service/src/transport/: espi.rs  mod.rs
embedded-service/src/ec_type/: message.rs  mod.rs  structure.rs
embedded-service/src/ec_type/protocols/: mctp.rs
espi-service/: Cargo.toml
espi-service/src/: espi_service.rs
