[package]
name = "debug-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bbq2 = "0.4.2"
critical-section.workspace = true
defmt.workspace = true
embassy-executor.workspace = true
embassy-sync.workspace = true
embedded-services.workspace = true
heapless = "0.8"
rtt-target = "0.6.1"

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }

# Transport features
[features]
default = []
test = []

# Transport options - can be combined
espi-transport = []

[lints]
workspace = true
